# kmds-modeling

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  MANIFEST.in  PRODUCT.md  README.md  USER_GUIDE.md  __init__.py  base.py  evaluator.py  exploration.ipynb  main.py  model_config.yaml  pipeline_runner.py  plan-template.md  pyproject.toml  runner.py  settings.json  validate_modeling_paths.py
.beads/: config.yaml  metadata.json
.github/: copilot-instructions.md
.github/agents/: implement.agent.md  plan.agent.md
.github/prompts/: implement.prompt.md  plan-qna.prompt.md  plan.prompt.md
documents/: advisor.py  agent_initialization_stash.md  client_discovery_of_package_services.md  clustering_guidelines.md  code_assistant_insructions.md  copilot_init.md  design_governance_feature.md  is_graph_useful_governance.md  kmds-modeling-high-level-design.md  kmds_project_structure.md  notebook_utils.md  path_coordinator.md  pca_vs_manifold_based_approaches.md  project_organization.md  regression_selection_matrix.md  simple_example.md  structural_assessment_guideline.md
documents/modeling_contracts/: README.md  clustering_recommendations.md  graph_modeling_recommendations.md  survival_recommendations.md  tabular_classification_recommendations.md  tabular_regression_recommendations.md
documents/modeling_recommendations/: clustering_recommendations.md  graph_modeling_recommendations.md  tabular_classification_recommendations.md  tabular_regression_recommendations.md
tests/: test_model_spec.py  test_model_spec_interactive.py  test_survival_task.py  test_task_runners.py
(+23 files in other folders)
