[project]
name = "kmds-modeling"
version = "0.1.0"
description = "KMDS modeling pipeline package for KMDS lifecycle and model selection."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "kmds-featurization>=0.1.5",
    "click>=8.0",
    "pandas>=2.0",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "PyYAML>=6.0",
    "joblib>=1.3",
]

[project.scripts]
kmds-modeling = "kmds_modeling.cli:cli"

[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = { find = { where = ["src"] } }
